# napi-qr

./: .gitignore  Cargo.toml  README.md  flake.nix  index.d.ts  index.js  package.json  test.html
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: compact.rs  datamasking.rs  default.rs  ecl.rs  encode.rs  hardcode.rs  helpers.rs  lib.rs  module.rs  placement.rs  polynomials.rs  qr.rs  score.rs  version.rs
src/convert/: image.rs  mod.rs  svg.rs
src/tests/: bytes.rs  compact.rs  datamasking.rs  default.rs  encode.rs  error_correction.rs  polynomials.rs  score.rs  structure.rs  svg.rs  version.rs
