[package]
authors = [
  "Nicolas Ochsner <nicolasochsner@gmail.com>",
  "erwan.vivien <erwan.vivien@epita.fr>",
]
categories = ["multimedia", "multimedia::encoding", "multimedia::images"]
description = "Generates optimized QRCode with napi bindings"
edition = "2021"
keywords = ["qr", "qrcode", "qr-generator", "qrcode-generator", "qr-gen"]
name = "napi-qr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
resvg       = "0.45.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
